SC-121
changes in service were bad syntax
