# controllers/category/parser.py
@@ -7,3 +7,12 @@ def query_parser_save():
         "category_name", type=str, required=True, help="This field cannot be blank"
     )
     return parser
+
+
+def query_parser_put():
+    parser = reqparse.RequestParser()
+    parser.add_argument("_id", type=str, required=True, help="ID is required")
+    parser.add_argument(
+        "category_name", type=str, required=True, help="This field cannot be blank"
+    )
+    return parser
